# Brisk_Automations_Api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  compose.yaml  main.py  migrate.py  pyproject.toml
.github/workflows/: deploy.yaml
alembic/: env.py
alembic/versions/: 20260303_095515_f5cc6820dd7d_initial_migration.py  20260303_120432_8cd610bc24ab_add_new_table.py  20260304_100000_a1b2c3d4e5f6_add_job_application_tables.py  20260304_114518_cd7ae9ee3407_job_application.py  20260304_120000_b2c3d4e5f6g7_add_expires_at_to_jobs.py  20260304_140000_c3d4e5f6g7h8_remove_is_remote_from_jobs.py  20260307_232200_82c7fd712771_add_users_table.py  20260307_235358_d27b11445954_add_invites_table.py  20260308_005753_b8654f9ba0c1_update_invites.py  README.md
common/: __init__.py  auth_service.py  brisk_data_service.py  data_access_service.py  email_service.py  file_service.py  file_storage_service.py  pagination.py  recipient_service.py
container/: __init__.py  dependencies.py
controllers/: __init__.py  admin_controller.py  admin_jobs_controller.py  auth_controller.py  customer_calls_controller.py  customer_visit_controller.py  jobs_controller.py
database/: __init__.py  brisk_engines.py  session.py
middleware/: __init__.py  auth.py  logger.py
models/: __init__.py  invite.py  job.py  report_file.py  report_recipient.py  user.py
modules/customer_calls/: __init__.py  cron.py  (+1 more)
schemas/: __init__.py  admin.py  auth.py  common.py  jobs.py  reports.py
utils/: __init__.py  jwt.py  logger.py  password.py  report_type_helper.py  scheduler.py
(+19 files in other folders)
